--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -129,7 +129,7 @@
             <div class="row">
                 <div class="col">
                     <div><i class="fa-brands fa-whatsapp"></i> +52 222 859 0018</div>
-                    <div><i class="fa-brands fa-linkedin"></i> Rodrigo Chantes Palacios</div>
+                    <div><i class="fa-brands fa-linkedin-in"></i> Rodrigo Chantes Palacios</div>
                 </div>
                 <div class="col">
                     <div><i class="fa-solid fa-envelope"></i> rodrigo.chantes@gmail.com</div>
